# titanium-engineer-app

./: .dockerignore  .env.example  .gitignore  BUILD_LOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  celerybeat-schedule.db  docker-compose.yml  docker-entrypoint.sh  launch  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_jobs_table.py  002_create_findings_table.py  003_create_feedback_signals_table.py  004_eval_runs.py  005_kb_entries.py  006_corpus_versions.py  007_vibe_scores.py  008_codebase_indexes.py  009_eval_corpus_health.py
eval/: bias_detection.py  budget_attribution.py  classical_metrics.py  corpus.py  corpus_health.py  db.py  eval_runner.py  pyproject.toml  report.py  retrieval_quality.py
eval/judges/: _base.py  accuracy_judge.py  actionability_judge.py  clarity_judge.py  quality_with_cot_judge.py  relevance_judge.py  verification_trace_judge.py
eval/tasks/: ablation.py  index_contribution.py  meta_prompt.py  pre_ship.py  weekly_vibe.py
infra/scripts/: bootstrap-state.sh  build-push.sh  deploy.sh
infra/terraform/: aca.tf  locals.tf  openai.tf  outputs.tf  postgres.tf  redis.tf  storage.tf  terraform.tf  terraform.tfvars.example  tfplan  variables.tf  vnet.tf
otel/: collector-config.yml
pr_reviewer/: logging.py  telemetry.py
pr_reviewer/agents/: linter.py  llm.py  review_agent.py  tool_budget.py  tools.py
pr_reviewer/api/: health.py  main.py  webhook.py
pr_reviewer/components/: comment_poster.py  diff_parser.py  secret_scrubber.py
pr_reviewer/config/: loader.py  schema.py
pr_reviewer/kb/: cli.py  cross_repo.py  knowledge_base.py  mcp_client.py
pr_reviewer/models/: __init__.py  codebase_index.py  enums.py  feedback_signal.py  finding.py  job.py
pr_reviewer/store/: db.py  feedback_store.py  github_client.py  job_store.py
pr_reviewer/workers/: __init__.py  celery_app.py  container.py  feedback_processor.py  indexer.py  job_processor.py  tasks.py
tests/: conftest.py
tests/integration/: test_migrations.py
tests/unit/: test_codebase_index_model.py  test_comment_poster.py  test_config_completeness.py  (+27 more)
(+8 files in other folders)
