[project]
name = "pr-reviewer"
version = "0.1.0"
description = "LLM-backed GitHub PR auto-review service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web + async
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # LLM + agents
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "openai>=1.30.0",
    # Data + validation
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    # Vector store
    "chromadb>=0.5.0",
    # Security scanning
    "detect-secrets>=1.5.0",
    # Observability
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-celery>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pr_reviewer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "unit: fast, no I/O",
    "integration: requires backing services",
    "e2e: full stack",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]   # allow assert in tests
